fix and extend docs
